--- a/sample.env
+++ b/sample.env
@@ -19,7 +19,7 @@ XDEBUG_PORT=9003
 #XDEBUG_PORT=9000
 
 # Possible values: mysql57, mysql8, mariadb103, mariadb104, mariadb105, mariadb106
-DATABASE=mysql8
+DATABASE=mariadb106
 MYSQL_INITDB_DIR=./config/initdb
 MYSQL_DATA_DIR=./data/mysql
 MYSQL_LOG_DIR=./logs/mysql
